# Raw-Blink

./: CMakeLists.txt  blink.c  blink.ld  run.sh
include/: defines.h  main.h  types.h
link/: init.ld
src/: entry.S  main.c
